# CC-andCCs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODING_AGENT.md  PROMPT LONG HARNESS CLAUDE CODE COMPLETO.docx  RALPH_LOOP_PROMPT.md  RALPH_PROMPT.md  RALPH_RESUME.md  README.md  TODO_RALPH.md  claude-progress.txt  feature_list.json  init.sh  ralph_config.json
.claude/agents/: chaos-engineer.md  intelligence-architect.md  synthesis-architect.md
.github/: CODEOWNERS
.github/workflows/: ralph-test-gate.yml  test.yml
claude-multi-agent/: PLAN-OPTION-A-FILE-BASED.md  PLAN-OPTION-B-MCP-SERVER.md  PLAN-OPTION-C-ORCHESTRATOR.md  README.md  docker-compose.yml
claude-multi-agent/deployment/: README.md
claude-multi-agent/deployment/docker/: Dockerfile.option-a  Dockerfile.option-b  Dockerfile.option-c  docker-compose.yml  prometheus.yml
claude-multi-agent/deployment/helm/: Chart.yaml  values.yaml
claude-multi-agent/deployment/kubernetes/: configmap.yaml  deployment-option-a.yaml  deployment-option-b.yaml  deployment-option-c.yaml  hpa.yaml  ingress.yaml  istio.yaml  kustomization.yaml  multi-region.yaml  namespace.yaml  rbac.yaml  redis.yaml  resource-quotas.yaml  secrets.yaml  storage.yaml
claude-multi-agent/extensions/: README.md
claude-multi-agent/extensions/cli-plugins/: package.json
claude-multi-agent/extensions/vscode-extension/: package.json
claude-multi-agent/extensions/web-dashboard/: package.json
claude-multi-agent/monitoring/prometheus/: alerts.yml
claude-multi-agent/option-a-file-based/: coordination.py  demo.sh  pyproject.toml  reliability.py  security_integration.py  worker-loop.sh
claude-multi-agent/option-a-file-based/.coordination/: master-plan.md  tasks.json
claude-multi-agent/option-a-file-based/.coordination/context/: discoveries.md
claude-multi-agent/option-a-file-based/.coordination/results/: task-20260119205434-657d.md  task-20260119205434-ad93.md
claude-multi-agent/option-a-file-based/tests/: __init__.py  conftest.py  test_coordination.py
claude-multi-agent/option-b-mcp-broker/: .dockerignore  Dockerfile  demo-usage.md  jest.config.js  mcp-config.example.json  package-lock.json  package.json  tsconfig.json
claude-multi-agent/option-b-mcp-broker/.coordination/: mcp-state.json
claude-multi-agent/option-b-mcp-broker/src/: encrypted-store.ts  health-check.ts  index.ts  performance.ts  rate-limiter.ts  reliability.ts  request-queue.ts  security.ts  sqlite-store.ts  sse.ts  subscriptions.ts  types.ts  webhooks.ts  websocket-transport.ts
claude-multi-agent/option-c-orchestrator/: .dockerignore  ARCHITECTURE_REPORT.md  Dockerfile  README.md  demo-config.json  pyproject.toml  requirements.txt
claude-multi-agent/option-c-orchestrator/examples/: basic_usage.py  leader_planning.py
claude-multi-agent/option-c-orchestrator/src/orchestrator/: __init__.py  advanced.py  agent.py  async_orchestrator.py  cli.py  config.py  logging_config.py  metrics.py  models.py  monitor.py  orchestrator.py  planner.py  prometheus_metrics.py  reliability.py  security_integration.py  tracing.py
claude-multi-agent/option-c-orchestrator/tests/: __init__.py  conftest.py  mcp_mock_server.py  mutation_testing.py  test_agent_unit.py  test_data_generators.py  test_doc_generator.py  test_e2e.py  test_environment.py  test_models.py  test_orchestrator_unit.py  test_property_based.py  test_regression.py  test_smoke.py  test_snapshots.py
claude-multi-agent/shared/ai/: __init__.py  adaptive_prioritization.py  anomaly.py  assignment.py  decomposition.py  descriptions.py  duration.py  (+5 more)
claude-multi-agent/tests/: __init__.py  conftest.py
docs/: AUDIT_REPORT.md  CHANGELOG.md  CODEBASE_AUDIT_PROMPT.md  CONTRIBUTING.md  LICENSE.md  README.md  _config.yml  getting-started.md  index.md
docs/_data/: nav.yml
docs/adr/: ADR-001-coordination-options.md  ADR-002-leader-worker-pattern.md  ADR-003-file-based-coordination.md  ADR-004-mcp-protocol.md  ADR-005-task-lifecycle.md  ADR-006-state-persistence.md  ADR-007-race-condition-handling.md  ADR-TEMPLATE.md  README.md
docs/api/: cli-reference.md  mcp-tools.md  openapi.yaml  python-api.md
docs/architecture/: components.md  overview.md  task-lifecycle.md
docs/examples/: README.md  workflows.md
docs/guides/: developer-setup.md  migration.md  performance-tuning.md  security.md  troubleshooting.md  user-guide.md
docs/reference/: faq.md  glossary.md
docs/releases/: v2.1.0.md
docs/tutorials/: README.md  video-storyboard.md
ralph-wiggum-codex/: AGENTS.md  README.md  cancel-ralph.sh  ralph-loop.sh
scripts/: clean_coordination.py  ralph_loop.py  regenerate_test_catalog.py
(+95 files in other folders)
