[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-orchestrator"
version = "1.0.0"
description = "External orchestrator for multi-agent Claude Code coordination"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "watchfiles>=0.21.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
orchestrate = "orchestrator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
