[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-orchestrator"
version = "2.1.0"
description = "External orchestrator for multi-agent Claude Code coordination"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "watchfiles>=0.21.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",  # For monitoring and resource tracking (adv-c-mon-004)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "pip-audit>=2.7.0",
]
sandbox = [
    "psutil>=5.9.0",  # For resource monitoring in task sandboxing (adv-c-009)
]
# OBS-001: Prometheus metrics exporter
prometheus = [
    "prometheus-client>=0.17.0",
]
# OBS-003: OpenTelemetry tracing
opentelemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
# All observability features
observability = [
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[project.scripts]
orchestrate = "orchestrator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# ATOM-205: Explicit test collection patterns to avoid warnings from
# dataclasses like TestCase/TestModule in test_doc_generator.py
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Ignore dataclass collection warnings from test_doc_generator
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src/orchestrator"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 70

[tool.coverage.html]
directory = "artifacts/coverage"

[tool.coverage.xml]
output = "artifacts/coverage.xml"
